Add book component

--- a/src/app/header/components/header/header.component.html
+++ b/src/app/header/components/header/header.component.html
@@ -109,7 +109,7 @@
   <div class="max-w-7xl mx-auto p-2 sm:px-6 lg:px-8">
     <div class="flex space-x-4" data-test="menu">
       <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-      <a href="#" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page" data-test="home-type">Home type</a>
+      <a href="#" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page" data-test="home-type">HomeInterface type</a>
       <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium" data-test="dates">Dates</a>
       <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium" data-test="guests">Guests</a>
       <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium" data-test="price">Price</a>
