--- a/src/app/home/components/homes/homes.component.html
+++ b/src/app/home/components/homes/homes.component.html
@@ -23,7 +23,7 @@
           <button data-test="book-btn"
                   type="button"
                   class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium"
-                  (click)="openDialog()">Book</button>
+                  (click)="openDialog(home)">Book</button>
         </div>
       </div>
     </li>
