--- a/src/app/home/components/book/book.component.html
+++ b/src/app/home/components/book/book.component.html
@@ -1,1 +1,10 @@
 <h3 data-test="title">{{ data.home.title }}</h3>
+<div>
+  <span data-test="price">{{ data.home.price }}</span>
+</div>
+<div>
+  <input data-test="check-in" type="text">
+</div>
+<div>
+  <input data-test="check-out" type="text">
+</div>
