--- a/src/app/home/components/book/book.component.html
+++ b/src/app/home/components/book/book.component.html
@@ -1,10 +1,11 @@
-<h3 data-test="title">{{ data.home.title }}</h3>
+<h3 data-test="title">Book {{ data.home.title }}</h3>
 <div>
-  <span data-test="price">{{ data.home.price }}</span>
+  <span data-test="price">${{ data.home.price }} per night</span>
 </div>
 <div>
-  <input data-test="check-in" type="text">
+  <input data-test="check-in" type="text" [(ngModel)]="checkInDateStr">
 </div>
 <div>
-  <input data-test="check-out" type="text">
+  <input data-test="check-out" type="text" [(ngModel)]="checkOutDateStr">
 </div>
+<p data-test="total">Total: ${{ getTotal() || 0 }}</p>
